--- a/client/src/components/pages/Main/Main.css
+++ b/client/src/components/pages/Main/Main.css
@@ -1,214 +1,220 @@
+.athena-main {
+  animation-name: fadeIn;
+  animation-duration: 1200ms;
+  animation-fill-mode: forwards;
+}
+
 header {
-    margin-top: 15vh;
-    height: 20vh;
-    width: 100vw;
-    background-position: bottom;
-    background-repeat: no-repeat;
-    background-size: cover;
+  margin-top: 15vh;
+  height: 20vh;
+  width: 100vw;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .headMsg {
-    text-align: center;
-    margin: 185px auto;
-    padding: 30px;
-    position: relative;
-    max-width: 1100px;
+  text-align: center;
+  margin: 185px auto;
+  padding: 30px;
+  position: relative;
+  max-width: 1100px;
 }
 
 .headMsg > h1 {
-    font-size: 60px;
+  font-size: 60px;
 }
 
 .headMsg > p {
-    font-size: 16px;
-    color: #cecdcd;
-    margin-top: 30px;
+  font-size: 16px;
+  color: #cecdcd;
+  margin-top: 30px;
 }
 
 .features {
-    background-color: var(--primary-background);
-    height: fit-content;
-    margin-top: 240px;
+  background-color: var(--primary-background);
+  height: fit-content;
+  margin-top: 240px;
 }
 
 .feature {
-    width: 100%;
-    height: 500px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    padding: 50px 0px;
-    box-sizing: unset !important;
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 50px 0px;
+  box-sizing: unset !important;
 }
 
 .feature:nth-child(even) {
-    background-color: #1f222c !important;
+  background-color: #1f222c !important;
 }
 
 .featureContent {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 65%;
-    max-width: 1300px;
-    margin: 30px auto;
-    padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 65%;
+  max-width: 1300px;
+  margin: 30px auto;
+  padding: 15px;
 }
 
 .featureContent:first-child {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .featureContent:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .feature img {
-    height: 450px;
-    width: 550px;
-    border-radius: 30px;
+  height: 450px;
+  width: 550px;
+  border-radius: 30px;
 }
 
 .feature_desc {
-    width: fit-content;
-    height: fit-content;
-    width: -moz-fit-content;
-    margin: 20px;
+  width: fit-content;
+  height: fit-content;
+  width: -moz-fit-content;
+  margin: 20px;
 }
 
 .feature_desc > h1 {
-    font-size: 60px;
-    color: var(--primary-theme);
+  font-size: 60px;
+  color: var(--primary-theme);
 }
 
 .feature_desc > p {
-    font-size: 24px;
-    width: 450px;
-    margin-left: 13px;
+  font-size: 24px;
+  width: 450px;
+  margin-left: 13px;
 }
 
 #feature_moderation {
-    flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 #feature_misc {
-    flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 .question {
-    height: 150px;
-    text-align: center;
-    width: 100vw;
-    background-color: var(--primary-background);
-    padding: 100px 0px;
-    box-sizing: unset !important;
+  height: 150px;
+  text-align: center;
+  width: 100vw;
+  background-color: var(--primary-background);
+  padding: 100px 0px;
+  box-sizing: unset !important;
 }
 
 .question > h1 {
-    margin-bottom: 35px;
+  margin-bottom: 35px;
 }
 
 .btn-main {
-    background: var(--secondary-theme);
-    padding: 15px;
-    color: white !important;
-    margin: 25px;
-    border-radius: 5px;
-    font-weight: bold;
-    transition: all 300ms ease;
+  background: var(--secondary-theme);
+  padding: 15px;
+  color: white !important;
+  margin: 25px;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: all 300ms ease;
 }
 
 .btn-main:hover {
-    text-decoration: none !important;
-    -webkit-box-shadow: 0px 5px 41px 0px rgba(0,0,0,0.61); 
-    box-shadow: 0px 5px 41px 0px rgba(0,0,0,0.61);
+  text-decoration: none !important;
+  -webkit-box-shadow: 0px 5px 41px 0px rgba(0, 0, 0, 0.61);
+  box-shadow: 0px 5px 41px 0px rgba(0, 0, 0, 0.61);
 }
 
-@media(max-width: 1900px) {
-    .featureContent {
-        width: 100%;
-    }
+@media (max-width: 1900px) {
+  .featureContent {
+    width: 100%;
+  }
 }
 
-@media(max-width: 1320px) {
-    .athena-main h1 {
-        font-size: 40px !important;
-    }
+@media (max-width: 1320px) {
+  .athena-main h1 {
+    font-size: 40px !important;
+  }
 
-    .athena-main p {
-        font-size: 18px !important;
-    }
+  .athena-main p {
+    font-size: 18px !important;
+  }
 
-    .features img {
-        height: 400px;
-        width: 400px;
-        margin: 30px;
-    }
+  .features img {
+    height: 400px;
+    width: 400px;
+    margin: 30px;
+  }
 
-    #dropdown-icon {
-        margin-top: 13px;
-    }
+  #dropdown-icon {
+    margin-top: 13px;
+  }
 }
 
-@media(max-width: 1100px) {
-    .feature {
-        height: fit-content;
-        height: -moz-fit-content;
-    }
+@media (max-width: 1100px) {
+  .feature {
+    height: fit-content;
+    height: -moz-fit-content;
+  }
 
-    .featureContent {
-        flex-direction: column !important;
-        text-align: center;
-    }
+  .featureContent {
+    flex-direction: column !important;
+    text-align: center;
+  }
 
-    .featureContent > img {
-        margin: 10px !important;
-    }
+  .featureContent > img {
+    margin: 10px !important;
+  }
 
-    .feature_desc {
-        margin: 10px !important; 
-    }
+  .feature_desc {
+    margin: 10px !important;
+  }
 }
 
-@media(max-width: 992px) {
-    .athena-navbar .profile-part {
-        width: fit-content;
-        width: -moz-fit-content;
-        margin: 15px auto;
-    }
+@media (max-width: 992px) {
+  .athena-navbar .profile-part {
+    width: fit-content;
+    width: -moz-fit-content;
+    margin: 15px auto;
+  }
 
-    .loginBtn {
-        margin: 10px;
-    }
+  .loginBtn {
+    margin: 10px;
+  }
 }
 
-@media(max-width: 460px) {
-    .athena-main h1 {
-        font-size: 30px !important;
-    }
+@media (max-width: 460px) {
+  .athena-main h1 {
+    font-size: 30px !important;
+  }
 
-    .athena-main p {
-        font-size: 15px !important;
-    }
+  .athena-main p {
+    font-size: 15px !important;
+  }
 
-    .headMsg {
-        margin: 15px 0px !important
-    }
+  .headMsg {
+    margin: 15px 0px !important;
+  }
 
-    .features img {
-        height: 300px;
-        width: 300px;
-        margin: 30px;
-    }
+  .features img {
+    height: 300px;
+    width: 300px;
+    margin: 30px;
+  }
 
-    .feature_desc {
-        width: 99%;
-        height: fit-content;
-        margin: auto;
-    }
+  .feature_desc {
+    width: 99%;
+    height: fit-content;
+    margin: auto;
+  }
 
-    .feature_desc > p {
-        width: 100%;
-        margin: 0;
-    }
+  .feature_desc > p {
+    width: 100%;
+    margin: 0;
+  }
 }
