--- a/client/src/components/pages/Main/style.css
+++ b/client/src/components/pages/Main/style.css
@@ -138,11 +138,11 @@ header {
 
 @media (max-width: 1320px) {
   .athena-main h1 {
-    font-size: 40px !important;
+    font-size: 40px;
   }
 
   .athena-main p {
-    font-size: 18px !important;
+    font-size: 18px;
   }
 
   .features img {
