Adde base configuration page for dashboard + added new input and input select comp

--- a/client/src/components/layout/Input/InputSelect/style.css
+++ b/client/src/components/layout/Input/InputSelect/style.css
@@ -1,47 +1,65 @@
-.athena-input-selection {
-    width: 85%;
-    max-width: 500px;
+.athena-input-select-container {
+  width: 100%;
+  max-width: 500px;
 }
 
-.athena-input-selection-main {
-    padding: 10px;
-    background-color: var(--secondary-background);
-    border-radius: 10px;
-    cursor: pointer;
-    user-select: none;
-    color: #b4b3b3;
-    margin: 10px;
-    border: 1px solid transparent;
-    transition: all 350ms ease;
+.athena-input-select-main {
+  background-color: var(--secondary-background);
+  padding: 10px;
+  height: 50px;
+  margin: 10px 0px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  cursor: pointer;
+  transition: all 450ms ease;
+  border: 1px solid transparent;
 }
 
-.athena-input-selection-main:hover {
-    border: 1px solid var(--primary-theme);
+.athena-input-select-main:hover {
+  border-color: var(--primary-theme);
 }
 
-.athena-input-selection-slide {
-    list-style: none;
-    background-color: var(--secondary-background);
-    padding: 5px;
-    text-align: left;
-    border-radius: 10px;
-    width: 97%;
-    margin: auto;
-    border: 1px solid #333333;
-    transition: all 350ms ease;
-    animation-name: slideInit;
-    animation-duration: 1200ms;
-    animation-fill-mode: forwards;
+.athena-input-select-main p {
+  margin: 0;
 }
 
-.athena-input-selection-slide-option {
-    padding: 10px;
-    margin: 3px;
-    cursor: pointer;
-    border-radius: 10px;
-    transition: all 350ms ease;
+.athena-input-options {
+  position: absolute;
+  background-color: var(--third-background);
+  border: 1px solid var(--primary-background);
+  width: 100%;
+  max-width: 500px;
+  padding: 7px;
+  list-style: none;
+  border-radius: 10px;
+  max-height: 300px;
+  overflow-y: scroll;
+  cursor: pointer;
+  margin: 0px;
+  margin-top: 10px;
+  -webkit-box-shadow: 0px 12px 25px 9px rgba(0, 0, 0, 0.13);
+  box-shadow: 0px 12px 25px 9px rgba(0, 0, 0, 0.13);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  display: none;
 }
 
-.athena-input-selection-slide-option:hover {
-    background-color: var(--primary-background);
+.athena-input-option {
+  padding: 5px;
+  width: 100%;
+  border-radius: 6px;
+  margin: 5px 0px;
+  transition: all 250ms ease;
+}
+
+.athena-input-options-active {
+  display: block !important;
+}
+
+.athena-input-option:hover {
+  background-color: var(--primary-theme);
 }
