--- a/client/src/components/pages/Dashboard/style.css
+++ b/client/src/components/pages/Dashboard/style.css
@@ -129,6 +129,25 @@
   margin-bottom: 10px;
 }
 
+.module-prop {
+  background-color: var(--primary-background);
+  padding: 15px;
+  border-radius: 10px;
+  margin: 30px 0px;
+}
+
+.module-prop-title {
+  margin: 10px;
+  margin-left: 0px;
+  font-size: 32px;
+}
+
+.module-prop-description {
+  margin: 5px;
+  margin-left: 0px;
+  color: #cac9c9;
+}
+
 @media only screen and (max-width: 900px) {
   .athena-dash-fade {
     height: 100vh;
@@ -150,5 +169,28 @@
     position: absolute;
     z-index: 2000;
     transform: translateX(-320px);
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .dash-module-selector {
+    width: 260px;
+  }
+
+  .dash-module-container {
+    width: 100vw;
+    padding: 10px 15px;
+  }
+
+  .dash-module-container h1 {
+    font-size: 9vw !important;
+  }
+
+  .dash-module-container h5 {
+    font-size: 6vw !important;
+  }
+
+  .dash-module-container a {
+    font-size: 4vw;
   }
 }
