--- a/client/src/components/pages/Legal/style.css
+++ b/client/src/components/pages/Legal/style.css
@@ -1,33 +1,33 @@
 .athena-legal-container {
-    width: 65%;
-    min-height: 900px;
-    height: fit-content;
-    height: -moz-fit-content;
-    margin: 40px auto;
-    max-width: 1100px;
+  width: 65%;
+  min-height: calc(100vh - 590px);
+  height: fit-content;
+  height: -moz-fit-content;
+  margin: 40px auto;
+  max-width: 1100px;
 }
 
 .athena-legal-head {
-    margin: 140px;
-    padding: 10px;
-    font-size: 30px;
-    text-align: center;
-    margin-bottom: 50px;
+  margin: 140px;
+  padding: 10px;
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 50px;
 }
 
 .athena-legal-content {
-    text-align: left;
-    padding: 15px;
+  text-align: left;
+  padding: 15px;
 }
 
-@media(max-width: 1100px) {
-    .athena-legal-container {
-        width: 90%;
-    }
+@media (max-width: 1100px) {
+  .athena-legal-container {
+    width: 90%;
+  }
 
-    .athena-legal-head {
-        width: fit-content;
-        margin: 140px auto;
-        margin-bottom: 50px;
-    }
+  .athena-legal-head {
+    width: fit-content;
+    margin: 140px auto;
+    margin-bottom: 50px;
+  }
 }
