bunch of ui improvements implemented

--- a/client/src/components/pages/Commands/style.css
+++ b/client/src/components/pages/Commands/style.css
@@ -21,6 +21,7 @@ h5 {
 .commands-container {
   width: 80vw !important;
   max-width: 1200px;
+  min-height: calc(100vh - 860px);
   display: flex;
   justify-content: center;
   margin: 30px auto;
