--- a/client/src/components/layout/Navbar/Profile/Dropdown/style.css
+++ b/client/src/components/layout/Navbar/Profile/Dropdown/style.css
@@ -22,6 +22,7 @@
   box-shadow: 0px 12px 25px 9px rgba(0, 0, 0, 0.13);
   margin: 10px;
   animation: dropdownInit 400ms forwards;
+  z-index: 10000;
 }
 
 .dropdown li {
