--- a/client/src/components/pages/Commands/style.css
+++ b/client/src/components/pages/Commands/style.css
@@ -112,7 +112,7 @@ h5 {
 
 @media (max-width: 350px) {
   .commands-container {
-    width: 100vw;
+    width: 100vw !important;
     margin: 0;
   }
 
