--- a/client/src/index.css
+++ b/client/src/index.css
@@ -57,6 +57,7 @@ body {
   animation-duration: 1200ms;
   animation-fill-mode: forwards;
   font-family: "Poppins", sans-serif !important;
+  scrollbar-color: var(--primary-theme) var(--primary-background);
 }
 
 #__athena {
