--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,6 +36,8 @@
   --secondary-background: #1c1e27;
   --third-background: #1f222c;
 
+  --primary-background-soft: #15161dfb;
+
   --primary-theme: #5865f2;
   --secondary-theme: #4b56cc;
 
