--- a/client/src/components/layout/Navbar/Profile/style.css
+++ b/client/src/components/layout/Navbar/Profile/style.css
@@ -7,6 +7,8 @@
   font-weight: bold;
   margin-right: 60px;
   transition: all 300ms ease;
+  -webkit-box-shadow: 0px 0px 50px 5px rgba(91, 89, 255, 0.27);
+  box-shadow: 0px 0px 50px 5px rgba(91, 89, 255, 0.27);
 }
 
 .loginBtn:hover {
@@ -70,9 +72,9 @@
     background-color: var(--third-background);
   }
 
-  .navbar-collapse .profile-part {
+  .navbar-collapse .profile-part .profile {
     margin: 0;
-    padding: 5px 20px;
+    padding: 10px 20px;
     border-radius: 10px;
     background-color: var(--third-background);
   }
