--- a/client/src/components/pages/Main/style.css
+++ b/client/src/components/pages/Main/style.css
@@ -122,12 +122,13 @@ header {
   border-radius: 5px;
   font-weight: bold;
   transition: all 300ms ease;
+  -webkit-box-shadow: 0px 0px 50px 5px rgba(91, 89, 255, 0.27);
+  box-shadow: 0px 0px 50px 5px rgba(91, 89, 255, 0.27);
 }
 
 .btn-main:hover {
   text-decoration: none !important;
-  -webkit-box-shadow: 0px 5px 41px 0px rgba(0, 0, 0, 0.61);
-  box-shadow: 0px 5px 41px 0px rgba(0, 0, 0, 0.61);
+  background-color: var(--primary-theme);
 }
 
 @media (max-width: 1900px) {
