changed text alignment on server card

--- a/client/src/components/pages/Servers/Server/style.css
+++ b/client/src/components/pages/Servers/Server/style.css
@@ -74,6 +74,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  text-align: center;
 }
 
 .server-bottom .athena-button {
