--- a/client/src/components/pages/Dashboard/ChangesDeteced/style.css
+++ b/client/src/components/pages/Dashboard/ChangesDeteced/style.css
@@ -48,6 +48,11 @@
   margin: 0px 5px;
 }
 
+.athena-changes-detected-container .spinner > div {
+  width: 14px !important;
+  height: 14px !important;
+}
+
 @keyframes changesDetectedClosing {
   0% {
     transform: translateY(0px);
