--- a/client/src/components/layout/Input/InputRole/style.css
+++ b/client/src/components/layout/Input/InputRole/style.css
@@ -11,19 +11,22 @@
 
 .athena-input-role-container {
   width: 85% !important;
-  background-color: var(--secondary-background);
   border: none;
-  border-radius: 10px;
   margin: 10px 0px;
   transition: all 350ms ease;
   color: #b6b6b6;
-  padding: 10px;
   border: 1px solid transparent;
   max-width: 500px !important;
+}
+
+.athena-input-role-wrapper {
+  width: 100%;
+  border-radius: 10px;
+  padding: 10px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  position: relative;
+  background-color: var(--secondary-background);
 }
 
 .athena-input-roles {
@@ -38,15 +41,17 @@
 }
 
 .athena-input-roles-add-menu {
-  position: absolute;
-  top: 120%;
-  width: 90%;
+  width: 100%;
+  margin: 10px 0px;
+  max-width: 500px;
   padding: 7px;
   background-color: var(--primary-background);
   border-radius: 7px;
-  max-height: 300px;
+  max-height: 200px;
   overflow: hidden;
-  animation: rolesMenuInit 200ms forwards;
+  animation: rolesMenuInit 250ms forwards !important;
+  -webkit-box-shadow: 0px 4px 50px -9px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 4px 50px -9px rgba(0, 0, 0, 0.5);
 }
 
 .athena-input-roles-add-menu:hover {
