bunch of ui bug fixes and improvements upated guilds api route

--- a/client/src/components/layout/Input/InputRole/MenuRole/style.css
+++ b/client/src/components/layout/Input/InputRole/MenuRole/style.css
@@ -16,7 +16,7 @@
 .athena-input-menu-role-color {
   height: 13px;
   width: 13px;
-  background-color: blue;
+  background-color: #b4b4b4;
   border-radius: 50%;
   margin-left: 3px;
 }
