--- a/client/src/components/layout/Input/InputRole/Role/style.css
+++ b/client/src/components/layout/Input/InputRole/Role/style.css
@@ -13,7 +13,7 @@
   width: 13px;
   height: 13px;
   border-radius: 50%;
-  background-color: transparent;
+  background-color: #b4b4b4;
   display: flex;
   align-items: center;
   justify-content: center;
