bunch of client-side improvements implemented updated rate-limiter middleware

--- a/client/src/components/layout/Loader/style.css
+++ b/client/src/components/layout/Loader/style.css
@@ -85,6 +85,9 @@
   width: 100vw;
   z-index: 1000;
   background-color: var(--secondary-background);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .cover > .spinner {
