fixed navbar scroll freeze

--- a/src/client/styles/Navbar.module.scss
+++ b/src/client/styles/Navbar.module.scss
@@ -41,11 +41,11 @@
 
 @media only screen and (max-width: 900px) {
   .navbarActive {
-    background-color: var(--primary-background-glass);
+    background-color: var(--primary-background);
 
     .navLinks {
       display: flex !important;
-      background-color: var(--primary-background-glass);
+      background-color: var(--primary-background);
     }
   }
 
