--- a/src/client/styles/Footer.module.scss
+++ b/src/client/styles/Footer.module.scss
@@ -50,3 +50,13 @@
     }
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .footer {
+    justify-content: flex-start;
+
+    div {
+      width: 100%;
+    }
+  }
+}
