--- a/src/client/styles/Commands.page.module.scss
+++ b/src/client/styles/Commands.page.module.scss
@@ -1,8 +1,3 @@
-.container {
-  min-height: 58vh;
-  padding: 15px;
-}
-
 .header {
   display: flex;
   align-items: center;
@@ -11,11 +6,12 @@
   margin: 140px 0px;
 }
 
-.body {
+.main {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
+  min-height: calc(100vh - 750px);
 }
 
 .wrapper {
