--- a/src/client/styles/globals.scss
+++ b/src/client/styles/globals.scss
@@ -12,7 +12,7 @@
   --primary-theme-border: #2c2a6e;
 
   --primary-background: #0a070f;
-  --secondary-background: #1d152b;
+  --secondary-background: #0e0a14;
 
   --primary-background-border: #181124;
 
