--- a/src/client/styles/Home.page.module.scss
+++ b/src/client/styles/Home.page.module.scss
@@ -60,6 +60,23 @@
   }
 }
 
+.btn {
+  padding: 15px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+  transition: all 250ms ease;
+  border-radius: 6px;
+  background-color: var(--primary-link);
+  color: white;
+  border: 1px soid var(--primary-link);
+  text-decoration: none !important;
+
+  &:hover {
+    background-color: var(--secondary-link);
+  }
+}
+
 @media only screen and (max-width: 1000px) {
   .feature {
     .featureWrapper {
