--- a/src/client/styles/Home.page.module.scss
+++ b/src/client/styles/Home.page.module.scss
@@ -71,6 +71,8 @@
   color: white;
   border: 1px soid var(--primary-link);
   text-decoration: none !important;
+  -webkit-box-shadow: 0px 0px 50px 5px rgba(91, 89, 255, 0.27);
+  box-shadow: 0px 0px 50px 5px rgba(91, 89, 255, 0.27);
 
   &:hover {
     background-color: var(--secondary-link);
