--- a/src/client/styles/Home.page.module.scss
+++ b/src/client/styles/Home.page.module.scss
@@ -61,22 +61,10 @@
 }
 
 .btn {
-  padding: 15px;
-  font-size: 16px;
-  font-family: Arial, Helvetica, sans-serif;
-  cursor: pointer;
-  transition: all 250ms ease;
-  border-radius: 6px;
-  background-color: var(--primary-link);
-  color: white;
-  border: 1px soid var(--primary-link);
-  text-decoration: none !important;
+  max-width: 150px;
+  font-size: 20px;
   -webkit-box-shadow: 0px 0px 50px 5px rgba(91, 89, 255, 0.27);
   box-shadow: 0px 0px 50px 5px rgba(91, 89, 255, 0.27);
-
-  &:hover {
-    background-color: var(--secondary-link);
-  }
 }
 
 @media only screen and (max-width: 1000px) {
