--- a/src/client/styles/Loader.module.scss
+++ b/src/client/styles/Loader.module.scss
@@ -7,6 +7,7 @@
   100% {
     opacity: 0;
     display: none;
+    z-index: -1;
   }
 }
 
@@ -83,4 +84,23 @@
 
 .loaderComponent:nth-child(1) {
   animation-delay: -0.16s;
+}
+
+.coverAllPage {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  flex-direction: column;
+  z-index: 100;
+  opacity: 1;
+  background: linear-gradient(
+    170deg,
+    var(--primary-theme) 0%,
+    var(--primary-background) 75%
+  );
 }
