--- a/src/client/styles/Footer.module.scss
+++ b/src/client/styles/Footer.module.scss
@@ -1,4 +1,4 @@
-.footer {
+.container {
   width: 100vw;
   min-height: 330px;
   display: flex;
@@ -8,7 +8,7 @@
   overflow: hidden;
 }
 
-.footerWrapper {
+.wrapper {
   width: 70vw;
   max-width: 1400px;
   display: flex;
