--- a/src/client/styles/TextInput.module.scss
+++ b/src/client/styles/TextInput.module.scss
@@ -3,7 +3,7 @@
   padding: 10px;
   background-color: var(--primary-background);
   border: 1px solid #292929;
-  transition: all 450ms ease;
+  transition: border-color 450ms ease;
   border-radius: 6px;
   outline: none;
   color: #9b9a9a;
