--- a/src/client/styles/Dashboard.page.module.scss
+++ b/src/client/styles/Dashboard.page.module.scss
@@ -1,6 +1,6 @@
 .container {
   height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,15 +15,19 @@
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  overflow: hidden;
   position: relative;
   transition: all 450ms ease;
   position: relative;
   backdrop-filter: blur(100px);
+  overflow-x: hidden;
+  overflow-y: scroll;
+  padding: 15px 0px;
 }
 
 .content {
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: scrollssssssssss;
   width: calc(100% - 300px);
   padding: 15px;
 }
@@ -108,6 +112,7 @@
       margin: 5px 0px;
       cursor: pointer;
       transition: all 150ms ease;
+      text-decoration: none;
 
       &:hover {
         background-color: #05050583;
