--- a/src/client/styles/DashboardPages.module.scss
+++ b/src/client/styles/DashboardPages.module.scss
@@ -5,6 +5,8 @@
   border-radius: 6px;
   margin: 20px 0px;
   max-width: 1200px;
+  position: relative;
+  z-index: 0;
 
   .moduleHead {
     margin-bottom: 5px;
