--- a/frontend/src/styles/Server.module.scss
+++ b/frontend/src/styles/Server.module.scss
@@ -47,7 +47,7 @@
     height: 96px;
     width: 96px;
     border-radius: 50%;
-    border: 1px solid white;
+    box-shadow: 1px 54px 209px 42px rgba(0, 0, 0, 0.75);
   }
 }
 
