--- a/frontend/src/styles/Toggle.module.scss
+++ b/frontend/src/styles/Toggle.module.scss
@@ -2,7 +2,7 @@
   height: 27px;
   width: 52px;
   background-color: #a1a1a1;
-  border-radius: 20px;
+  border-radius: 5px;
   display: flex;
   align-items: center;
   transition: all 450ms ease;
@@ -13,20 +13,20 @@
 .inner {
   height: 20px;
   width: 20px;
-  border-radius: 30px;
+  border-radius: 4px;
   background-color: white;
   margin: 5px;
   transition: all 450ms ease;
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 
   &::before {
     content: "";
+    position: absolute;
+    left: 7.5px;
+    top: 7.5px;
     height: 5px;
     width: 5px;
-    border-radius: 50%;
+    border-radius: 1.5px;
     background-color: #a1a1a1;
   }
 }
