--- a/frontend/src/styles/Dashboard.page.module.scss
+++ b/frontend/src/styles/Dashboard.page.module.scss
@@ -28,7 +28,7 @@
 .content {
   height: 100%;
   overflow-x: hidden;
-  overflow-y: scrollssssssssss;
+  overflow-y: scroll;
   width: calc(100% - 300px);
   padding: 15px;
   position: relative;
