--- a/frontend/src/styles/DashboardPages.module.scss
+++ b/frontend/src/styles/DashboardPages.module.scss
@@ -4,7 +4,7 @@
   padding: 15px;
   border-radius: 6px;
   margin: 20px 0px;
-  max-width: 1200px;
+  max-width: 1000px;
   position: relative;
   z-index: 0;
 
@@ -28,4 +28,11 @@
   background-color: var(--primary-background);
   padding: 5px;
   padding-left: 10px;
+}
+
+.toggleableModule > .moduleHead > h2 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
